--- a/templates/bitd-roll.html
+++ b/templates/bitd-roll.html
@@ -1,8 +1,11 @@
 <div class="dice-tooltip bitd-die-tooltip">
-    {{#if attribute}}<div class="chat-label label-stripe-chat">{{attribute}}</div>{{/if}}
+  {{#if attribute}}
+    <div class="chat-label label-stripe-chat">{{attribute}}</div>
+  {{/if}}
+
 	<div class="chat-label-small label-stripe-chat-small">
-      {{{localize position_localize}}} | {{{localize effect_localize}}}
-    </div>
+    {{{localize positionLocalize}}} | {{{localize effectLocalize}}}
+  </div>
 
   {{#if zeromode}}
     <div class="chat-label-small-red label-stripe-chat-small-red">
@@ -10,69 +13,83 @@
     </div>
   {{/if}}
 
-  {{#if (eq roll_status "critical-success")}}
-  <div class="die {{roll_status}}">{{localize "BitDRoller.RollCriticalSuccess"}}</div>
-  <div class="description">
-    <p>{{{localize "BitDRoller.RollDoWithIncreasedEffect"}}}</p>
-	
-	{{#if (eq position "desperate")}}
-	<p>{{{localize "BitDRoller.RollXP"}}}</p>
-	{{/if}}
-  </div>
+  {{#if (eq rollStatus "critical-success")}}
+    <div class="die {{rollStatus}}">
+      {{localize "BitDRoller.RollCriticalSuccess"}}
+    </div>
+    <div class="description">
+      <p>{{{localize "BitDRoller.RollDoWithIncreasedEffect"}}}</p>
+	    {{#if (eq position "desperate")}}
+	      <p>{{{localize "BitDRoller.RollXP"}}}</p>
+	    {{/if}}
+    </div>
   {{/if}}
 
-  {{#if (eq roll_status "success")}}
-  <div class="die {{roll_status}}">{{localize "BitDRoller.RollSuccess"}}</div>
-  <div class="description">
-    <p>{{{localize "BitDRoller.RollDo"}}}</p>
-    
-	{{#if (eq position "desperate")}}
-	<p>{{{localize "BitDRoller.RollXP"}}}</p>
-	{{/if}}
-  </div>
+  {{#if (eq rollStatus "success")}}
+    <div class="die {{rollStatus}}">{{localize "BitDRoller.RollSuccess"}}</div>
+    <div class="description">
+      <p>{{{localize "BitDRoller.RollDo"}}}</p>
+      {{#if (eq position "desperate")}}
+        <p>{{{localize "BitDRoller.RollXP"}}}</p>
+	    {{/if}}
+    </div>
   {{/if}}
 
-  {{#if (eq roll_status "partial-success")}}
-  <div class="die {{roll_status}}">{{localize "BitDRoller.RollPartialSuccess"}}</div>
-  <div class="description">
-    <p>
-      {{#if (eq position "controlled")}}
-      {{{localize "BitDRoller.RollPartialSuccessPositionControlled"}}}
-      {{else if (eq position "risky")}}
-      {{{localize "BitDRoller.RollPartialSuccessPositionRisky"}}}
-      {{else}}
-      {{{localize "BitDRoller.RollPartialSuccessPosition"}}}
+  {{#if (eq rollStatus "partial-success")}}
+    <div class="die {{rollStatus}}">
+      {{localize "BitDRoller.RollPartialSuccess"}}
+    </div>
+    <div class="description">
+      <p>
+        {{#if (eq position "controlled")}}
+          {{{localize "BitDRoller.RollPartialSuccessPositionControlled"}}}
+        {{else if (eq position "risky")}}
+          {{{localize "BitDRoller.RollPartialSuccessPositionRisky"}}}
+        {{else}}
+          {{{localize "BitDRoller.RollPartialSuccessPosition"}}}
+        {{/if}}
+      </p>
+	    {{#if (eq position "desperate")}}
+        <p>{{{localize "BitDRoller.RollXP"}}}</p>
       {{/if}}
-    </p>
-	{{#if (eq position "desperate")}}
-	<p>{{{localize "BitDRoller.RollXP"}}}</p>
-	{{/if}}
-  </div>
+    </div>
   {{/if}}
 
-  {{#if (eq roll_status "failure")}}
-  <div class="die {{roll_status}}">{{localize "BitDRoller.RollFailure"}}</div>
-  <div class="description">
-    <p>
-      {{#if (eq position "controlled")}}
-      {{{localize "BitDRoller.RollFailurePositionControlled"}}}
-      {{else if (eq position "risky")}}
-      {{{localize "BitDRoller.RollFailurePositionRisky"}}}
-      {{else}}
-      {{{localize "BitDRoller.RollFailurePositionDesperate"}}}
+  {{#if (eq rollStatus "failure")}}
+    <div class="die {{rollStatus}}">{{localize "BitDRoller.RollFailure"}}</div>
+    <div class="description">
+      <p>
+        {{#if (eq position "controlled")}}
+          {{{localize "BitDRoller.RollFailurePositionControlled"}}}
+        {{else if (eq position "risky")}}
+          {{{localize "BitDRoller.RollFailurePositionRisky"}}}
+        {{else}}
+          {{{localize "BitDRoller.RollFailurePositionDesperate"}}}
+        {{/if}}
+      </p>
+      {{#if (eq position "desperate")}}
+        <p>{{{localize "BitDRoller.RollXP"}}}</p>
       {{/if}}
-    </p>
-	{{#if (eq position "desperate")}}
-	<p>{{{localize "BitDRoller.RollXP"}}}</p>
-	{{/if}}
-  </div>
+    </div>
   {{/if}}
 
   <ol class="dice-rolls">
     {{#each this.rolls}}
-    {{#if this.result}}
-    <li class="roll die bitdd6 {{../this.color}}"{{#if (eq this.result 6)}}style="color: green;"{{else if (eq this.result 3)}}style="color: red;"{{else if (eq this.result 2)}}style="color: red;"{{else if (eq this.result 1)}}style="color: red;"{{/if}}>{{{this.result}}}</li>
-    {{/if}}
+      {{#if this.result}}
+        <li class="roll die bitdd6 {{../this.color}}"
+          {{#if (eq this.result 6)}}
+            style="color: green;"
+          {{else if (eq this.result 3)}}
+            style="color: red;"
+          {{else if (eq this.result 2)}}
+            style="color: red;"
+          {{else if (eq this.result 1)}}
+            style="color: red;"
+            {{/if}}
+        >
+            {{{this.result}}}
+        </li>
+      {{/if}}
     {{/each}}
   </ol>
 </div>
