--- a/fitd-roller.css
+++ b/fitd-roller.css
@@ -8,61 +8,61 @@
 	--redlt: #ffb2b2;
 	--darkblue: #001324;
 }
-* .bitd-die-tooltip header {
+* .fitd-die-tooltip header {
   margin-bottom: 10px;
 }
-* .bitd-die-tooltip ul {
+* .fitd-die-tooltip ul {
   list-style: none;
 }
-* .bitd-die-tooltip .dialog-buttons {
+* .fitd-die-tooltip .dialog-buttons {
 	margin-top: 5px;
 }
-* .bitd-die-tooltip textarea {
+* .fitd-die-tooltip textarea {
   margin-top: 10px;
   margin-bottom: 20px;
 }
-* .bitd-die-tooltip td {
+* .fitd-die-tooltip td {
   padding: 5px;
 }
-* .bitd-die-tooltip section {
+* .fitd-die-tooltip section {
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-* section > * .bitd-die-tooltip:not(.label-stripe) {
+* section > * .fitd-die-tooltip:not(.label-stripe) {
   margin-right: 10px;
 }
-* section > * .bitd-die-tooltip:not(.label-stripe):last-child {
+* section > * .fitd-die-tooltip:not(.label-stripe):last-child {
   margin-right: 0px;
 }
-* .bitd-die-tooltip section .grow-one {
+* .fitd-die-tooltip section .grow-one {
   flex-grow: 1;
 }
-* .bitd-die-tooltip section .grow-two {
+* .fitd-die-tooltip section .grow-two {
   flex-grow: 2;
 }
-* .bitd-die-tooltip section.experience {
+* .fitd-die-tooltip section.experience {
   margin-bottom: 0px;
   justify-content: center;
 }
-* .bitd-die-tooltip nav {
+* .fitd-die-tooltip nav {
   margin-bottom: 10px;
 }
-* .bitd-die-tooltip .editor,
-* .bitd-die-tooltip .editor-content {
+* .fitd-die-tooltip .editor,
+* .fitd-die-tooltip .editor-content {
   min-height: 280px;
 }
-* .bitd-die-tooltip .flex-horizontal {
+* .fitd-die-tooltip .flex-horizontal {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-* .bitd-die-tooltip .flex-vertical {
+* .fitd-die-tooltip .flex-vertical {
   display: flex;
   flex-direction: column;
 }
-* .bitd-die-tooltip .black-label {
+* .fitd-die-tooltip .black-label {
   background-color: #191813;
   color: #EEEFFF;
   font-size: 21px;
@@ -71,7 +71,7 @@
   height: 30px !important;
   text-transform: capitalize;
 }
-* .bitd-die-tooltip .gray-label {
+* .fitd-die-tooltip .gray-label {
   background-color: #999;
   color: #191813;
   font-size: 21px;
@@ -80,7 +80,7 @@
   height: 30px !important;
   text-transform: capitalize;
 }
-* .bitd-die-tooltip .chat-label {
+* .fitd-die-tooltip .chat-label {
   background-color: #191813;
   color: #EEEFFF;
   font-size: 21px;
@@ -89,7 +89,7 @@
   height: 30px !important;
   text-transform: capitalize;
 }
-* .bitd-die-tooltip .chat-label-small {
+* .fitd-die-tooltip .chat-label-small {
   background-color: #999;
   color: #191813;
   font-size: small;
@@ -97,14 +97,14 @@
   padding: 3px 5px;
   height: 20px !important;
 }
-* .bitd-die-tooltip .chat-label-small-red {
+* .fitd-die-tooltip .chat-label-small-red {
   background-color: red;
   color: #191813;
   font-size: small;
   text-align: center;
   padding: 3px 5px;
 }
-* .bitd-die-tooltip .label-stripe {
+* .fitd-die-tooltip .label-stripe {
   text-transform: uppercase;
   background-color: #191813;
   color: #EEEFFF;
@@ -115,15 +115,15 @@
   display: flex;
   font-weight: bold;
 }
-* .bitd-die-tooltip .label-stripe .hoverlink {
+* .fitd-die-tooltip .label-stripe .hoverlink {
   cursor: pointer;
   transition: filter 0.1s;
 }
-* .bitd-die-tooltip .label-stripe .hoverlink:hover {
+* .fitd-die-tooltip .label-stripe .hoverlink:hover {
   filter: brightness(0.8);
   opacity: 0.9;
 }
-* .bitd-die-tooltip .label-stripe-red {
+* .fitd-die-tooltip .label-stripe-red {
   text-transform: uppercase;
   background-color: #191813;
   color: red;
@@ -134,7 +134,7 @@
   display: flex;
   font-weight: bold;
 }
-* .bitd-die-tooltip .label-stripe-gray {
+* .fitd-die-tooltip .label-stripe-gray {
   text-transform: uppercase;
   background-color: #92a6ad;
   margin-bottom: 10px;
@@ -144,7 +144,7 @@
   display: flex;
   font-weight: bold;
 }
-* .bitd-die-tooltip .label-stripe-chat {
+* .fitd-die-tooltip .label-stripe-chat {
   text-transform: uppercase;
   background-color: #191813;
   color: #EEEFFF;
@@ -155,7 +155,7 @@
   font-weight: bold;
   margin: 0;
 }
-* .bitd-die-tooltip .label-stripe-chat-small {
+* .fitd-die-tooltip .label-stripe-chat-small {
   text-transform: capitalize;
   background-color: #999;
   color: #191813;
@@ -164,7 +164,7 @@
   display: flex;
   font-weight: bold;
 }
-* .bitd-die-tooltip .label-stripe-chat-small-red {
+* .fitd-die-tooltip .label-stripe-chat-small-red {
   text-transform: capitalize;
   background-color: red;
   color: #191813;
@@ -173,10 +173,10 @@
   display: flex;
   font-weight: bold;
 }
-* .bitd-die-tooltip .description {
+* .fitd-die-tooltip .description {
   font-style: italic;
 }
-* .bitd-die-tooltip .tooltip .tooltiptext {
+* .fitd-die-tooltip .tooltip .tooltiptext {
   visibility: hidden;
   width: 200px;
   background-color: #191813;
@@ -187,40 +187,40 @@
   position: absolute;
   z-index: 9999;
 }
-* .bitd-die-tooltip .tooltip:hover .tooltiptext {
+* .fitd-die-tooltip .tooltip:hover .tooltiptext {
   visibility: visible;
 }
-* .bitd-die-tooltip .die {
+* .fitd-die-tooltip .die {
   font-weight: bold;
   text-transform: capitalize;
   font-size: large;
   margin-top: 10px;
 }
-* .bitd-die-tooltip .die.great,
-* .bitd-die-tooltip .die.critical-resist,
-* .bitd-die-tooltip .die.critical-success {
+* .fitd-die-tooltip .die.great,
+* .fitd-die-tooltip .die.critical-resist,
+* .fitd-die-tooltip .die.critical-success {
   color: #12a012;
 }
-* .bitd-die-tooltip .die.nodamage,
-* .bitd-die-tooltip .die.standard,
-* .bitd-die-tooltip .die.resist,
-* .bitd-die-tooltip .die.success {
+* .fitd-die-tooltip .die.nodamage,
+* .fitd-die-tooltip .die.standard,
+* .fitd-die-tooltip .die.resist,
+* .fitd-die-tooltip .die.success {
   color: #008000;
 }
-* .bitd-die-tooltip .die.malfunction,
-* .bitd-die-tooltip .die.limited,
-* .bitd-die-tooltip .die.partial-success {
+* .fitd-die-tooltip .die.malfunction,
+* .fitd-die-tooltip .die.limited,
+* .fitd-die-tooltip .die.partial-success {
   color: #04578f;
 }
-* .bitd-die-tooltip .die.damaged,
-* .bitd-die-tooltip .die.poor,
-* .bitd-die-tooltip .die.failure {
+* .fitd-die-tooltip .die.damaged,
+* .fitd-die-tooltip .die.poor,
+* .fitd-die-tooltip .die.failure {
   color: red;
 }
-* .dice-tooltip.bitd-die-tooltip .dice-rolls .roll.die.bitdd6.black {
+* .dice-tooltip.fitd-die-tooltip .dice-rolls .roll.die.fitdd6.black {
   background-image: url(icons/d6-black.svg) !important;
   color: var(--almost_white);
 }
-* .dice-tooltip.bitd-die-tooltip .dice-rolls .roll.die.bitdd6.gray {
+* .dice-tooltip.fitd-die-tooltip .dice-rolls .roll.die.fitdd6.gray {
   background-image: url(icons/d6-grey.svg) !important;
 }
