More terminology tweaks

--- a/templates/fitd-roll.html
+++ b/templates/fitd-roll.html
@@ -7,9 +7,9 @@
     {{{localize positionLocalize}}} | {{{localize effectLocalize}}}
   </div>
 
-  {{#if zeromode}}
+  {{#if zeroMode}}
     <div class="chat-label-small-red label-stripe-chat-small-red">
-      {{{localize "FitDRoller.RollZeromode"}}}
+      {{{localize "FitDRoller.RollZeroMode"}}}
     </div>
   {{/if}}
 
